feat: add gitlab_runner vm

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .vscode/
 mise.toml
+plan*
 
 # Terraform.gitignore: https://github.com/github/gitignore/blob/main/Terraform.gitignore
 # Local .terraform directories
